# ViStickedWord

./: LICENSE  README.rst  pyproject.toml  vistickedword.py
tests/: test_vistickedword.py
