[tool.poetry]
name = "vistickedword"
version = "1.0"
description = ""
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-pycodestyle = "^1.4.0"
pytest-flakes = "^4.0.0"
pygments = "^2.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
