[tool.poetry]
name = "vistickedword"
version = "0.9.5"
description = "Library to split sticked Vietnamese words"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
license = "MIT"
homepage = "https://github.com/hongquan/ViStickedWord"
repository = "https://github.com/hongquan/ViStickedWord.git"
readme = "README.rst"
classifiers = [
    'Natural Language :: Vietnamese',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Text Processing :: Linguistic',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers'
]

[tool.poetry.dependencies]
python = "^3.6"
single-version = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-pycodestyle = "^1.4.0"
pytest-flakes = "^4.0.0"
pygments = "^2.4.2"
devtools = {version = "^0.5.1", extras = ["pygments"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
